--- a/async.html
+++ b/async.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 <body>
     <button id="button">Click Me!</button>
@@ -16,7 +13,7 @@
             }
         }
 
-        document.getElementById("button").addEventListener("click" = () => {
+        document.getElementById("button").addEventListener("click", () => {
             wait(5000)
             alert("Ran!")
         })
