in callback hell

--- a/async2.html
+++ b/async2.html
@@ -5,7 +5,14 @@
 </head>
 <body>
     <script>
-        $.get('https://api.chucknorris.io/jokes/random', data => console.log(data))
+    
+        $.get('https://api.chucknorris.io/jokes/random', data => {
+            console.log(data)
+            $.get('https://api.chucknorris.io/jokes/random', data => {
+                console.log(data)
+            })    
+        )} 
+        console.log("request sent")
     </script>
     
 </body>
